--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <link href="http://localhost:4200/assets/css/style.css" rel="stylesheet" />
     <!-- You can change the theme colors from here -->
     <link id="theme" rel="stylesheet" />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body class="fix-header card-no-border fix-sidebar">
     <!-- ============================================================== -->
