--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
     />
     <!-- Bootstrap Core CSS -->
     <link
-      href="http://localhost:4200/assets/plugins/bootstrap/css/bootstrap.min.css"
+      href="./assets/plugins/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <!-- Custom CSS -->
-    <link href="http://localhost:4200/assets/css/style.css" rel="stylesheet" />
+    <link href="./assets/css/style.css" rel="stylesheet" />
     <!-- You can change the theme colors from here -->
     <link id="theme" rel="stylesheet" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
