--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Adminpro</title>
+    <title>AdminPro</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -20,6 +20,12 @@
     />
     <!-- Custom CSS -->
     <link href="./assets/css/style.css" rel="stylesheet" />
+    <!-- You can change the theme colors from here -->
+    <link
+      href="./assets/css/colors/default-dark.css"
+      id="theme"
+      rel="stylesheet"
+    />
     <!-- You can change the theme colors from here -->
     <link id="theme" rel="stylesheet" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -59,5 +65,31 @@
     <!--Custom JavaScript -->
     <script src="./assets/js/custom.min.js"></script>
     <!-- ============================================================== -->
+    <!-- Style switcher -->
+    <!-- ============================================================== -->
+    <script src="./assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
   </body>
+  <!-- ============================================================== -->
+  <!-- All Jquery -->
+  <!-- ============================================================== -->
+  <script src="../src/assets/plugins/jquery/jquery.min.js"></script>
+  <!-- Bootstrap tether Core JavaScript -->
+  <script src="../src/assets/plugins/bootstrap/js/popper.min.js"></script>
+  <script src="../src/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+  <!-- slimscrollbar scrollbar JavaScript -->
+  <script src="../src/assets/js/perfect-scrollbar.jquery.min.js"></script>
+  <!--Wave Effects -->
+  <script src="../src/assets/js/waves.js"></script>
+  <!--Menu sidebar -->
+  <script src="../src/assets/js/sidebarmenu.js"></script>
+  <!--stickey kit -->
+  <script src="../src/assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
+  <script src="../src/assets/plugins/sparkline/jquery.sparkline.min.js"></script>
+  <!--Custom JavaScript -->
+  <script src="../src/assets/js/custom.js"></script>
+  <script src="../src/assets/js/custom.js"></script>
+  <!-- ============================================================== -->
+  <!-- Style switcher -->
+  <!-- ============================================================== -->
+  <script src="../src/assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
 </html>
